# KEPL-opstools

./: .gitignore  README.md  pyproject.toml  requirements-bom.txt
bom_dic/: bom.py
bom_dic/bom_merge/: config_merge.py  main_merge.py
bom_dic/bom_merge/utils/: consolidator_merge.py  excel_reader_merge.py  exporter_merge.py  panel_detector_merge.py  row_cleaner_merge.py
bom_dic/bom_split/: config_split.py  main_split.py
bom_dic/bom_split/utils/: classifier_split.py  excel_reader_split.py  exporter_split.py  validator_split.py
