[project]
name = "kepl-opstools"
version = "0.1.0"
description = "A unified toolkit for BoM consolidation and panel classification."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }


[project.optional-dependencies]
bom = [
    # --- BoM Tools Dependencies ---
    "openpyxl==3.1.2",
    "pandas==2.2.2",
    "numpy>=1.26.0",
    "lxml>=5.1.0",
    "defusedxml==0.7.1",
    "pyrefly>=0.60.0",
]

all = [
    "kepl-opstools[bom]"]

[tool.pyrefly.errors]
redundant-cast = "warn"

[project.scripts]
bom = "bom_dic.bom:main"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pyrefly>=1.1.1",
    "pytest>=8.2.0",
    "ruff>=0.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Instructs Hatchling to package core directories into the build wheel
packages = [
    "bom_dic",
]

# ------- Ruff (Linting & Formatting) -------
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["bom", "tests"]

[tool.ruff.lint]
select = [
    "ANN",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "UP",
    "W"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "ANN"]

[tool.ruff.format]
docstring-code-format = true


# ------- Pytest -------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.pyrefly]
search-path = ["."]
python-version = "3.12.0"
preset = "strict"
ignore-missing-imports = [
    "openpyxl.*",
    "lxml.*",
    "pandas.*",
    "numpy.*",
    "statsforecast.*",
    "fastexcel.*",
    "plotly.*",
    "sklearn.*",
    "lightgbm.*",
]
